php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #10896 fgetcsv doesn't handle foreign characters properly
Submitted: 2001-05-16 04:21 UTC Modified: 2001-06-03 11:43 UTC
From: mirsoft at gmx dot net Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 4.0.4pl1 OS: Windows 2000
Private report: No CVE-ID: None
 [2001-05-16 04:21 UTC] mirsoft at gmx dot net
fgetcsv doesn't handle foreign characters properly.
For example if the csv file has following content:

??na;2.1.2001;2-h? de? Nov?ho roka

the comand $line = fgetcsv($fd, 4096, ";");

gets the array('na','2.1.2001','2-h? de? Nov?ho roka').


(proper array is ('??na','2.1.2001','2-h? de? Nov?ho roka'), using the fgets&explode function works without problem:
$rec = fgets($fd, 4096);
$line=explode (";", $rec);
)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-06-03 11:43 UTC] sniper@php.net
I can't reproduce this with latest CVS.
Considered fixed. You should try PHP 4.0.5 too.
This might have been fixed in it too.

--Jani

 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 10 01:00:01 2026 UTC